--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -64,12 +64,36 @@
      "text": [
       "Starting ...\n",
       "1 ouf of 96 processed\n",
-      "6 ouf of 96 processed\n"
+      "6 ouf of 96 processed\n",
+      "11 ouf of 96 processed\n",
+      "16 ouf of 96 processed\n",
+      "21 ouf of 96 processed\n",
+      "26 ouf of 96 processed\n",
+      "31 ouf of 96 processed\n",
+      "36 ouf of 96 processed\n",
+      "41 ouf of 96 processed\n",
+      "46 ouf of 96 processed\n",
+      "51 ouf of 96 processed\n",
+      "56 ouf of 96 processed\n",
+      "61 ouf of 96 processed\n",
+      "66 ouf of 96 processed\n",
+      "71 ouf of 96 processed\n",
+      "76 ouf of 96 processed\n"
      ]
     }
    ],
    "source": [
+    "#temporal graphs generation\n",
+    "\n",
+    "time_s = '2022-02-10'\n",
+    "time_e = '2022-03-11'\n",
+    "\n",
+    "time_bins = pd.date_range(start = time_s, end = time_e, freq ='7D').astype(str) # spliting into weeks\n",
+    "\n",
+    "max_time = len(time_bins) - 1 #max number of timestamps\n",
+    "\n",
     "print(\"Starting ...\")\n",
+    "\n",
     "for i,file in enumerate(all_files):\n",
     "\n",
     "    df = pd.read_csv(\n",
@@ -80,24 +104,22 @@
     "        date_parser=lambda col: pd.to_datetime(col,unit='s',utc=True)\n",
     "    )\n",
     "    \n",
-    "    df = df[(df.ts >= '2022-02-10') & (df.ts <= '2022-03-10')]\n",
     "    \n",
-    "    df.to_csv('war_data.csv', mode='a', index=False, header=False)\n",
+    "    df = df[(df.ts >= time_s) & (df.ts <= time_e)] # time_s - time_e\n",
+    "    \n",
+    "    df.to_csv('war_data_week_{}_{}_{}.csv'.format(max_time,time_s,time_e), mode='a', index=False, header=False)\n",
     "\n",
+    "    for j,time_chunk in enumerate(reversed(time_bins[1:-1]),1):\n",
+    "        df = df[df.ts <= time_chunk] # creating time chunks\n",
+    "        df.to_csv('war_data_week_{}_{}_{}.csv'.format(max_time-j,time_s,time_chunk), mode='a', index=False, header=False)\n",
+    "    \n",
     "    del df\n",
     "    \n",
     "    if i%5 == 0:\n",
     "        print(\"{} ouf of {} processed\".format(i+1,len(all_files)))\n",
-    "        "
+    "        \n",
+    "print(\"Finished ...\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f49a2c00-8b3d-4f88-9330-c3205bd3929a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
