--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,233 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1b5bed4a-eee7-4920-89a4-74a39b617a4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5cb8960b-8585-4280-a456-ed7cb262b4ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\n",
+    "    \"war_data_week_1_2022-02-10_2022-02-17.csv\",   \n",
+    "    header=None,    \n",
+    "    names = [\"ts\",\"tx_id\",\"input_tx\",\"vout\",\"output_to\",\"output_index\",\"value\",\"script\",\"blk_file\"], \n",
+    ")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "700504b0-04ab-4a86-97a1-fc8b37d4686a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ts</th>\n",
+       "      <th>tx_id</th>\n",
+       "      <th>input_tx</th>\n",
+       "      <th>vout</th>\n",
+       "      <th>output_to</th>\n",
+       "      <th>output_index</th>\n",
+       "      <th>value</th>\n",
+       "      <th>script</th>\n",
+       "      <th>blk_file</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-02-10 00:46:40+00:00</td>\n",
+       "      <td>d71dc8407017594d51a5de4587b622e2b3cb67d6de3e76...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19dENFt4wVwos6xtgwStA6n8bbA57WCS58</td>\n",
+       "      <td>0</td>\n",
+       "      <td>640650575</td>\n",
+       "      <td>p2pkh</td>\n",
+       "      <td>2916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-02-10 00:46:40+00:00</td>\n",
+       "      <td>d71dc8407017594d51a5de4587b622e2b3cb67d6de3e76...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>op_return</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>OP_RETURN</td>\n",
+       "      <td>2916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-02-10 00:46:40+00:00</td>\n",
+       "      <td>af1808a1cd6afc5be651798356a63245cab5e58e8028c8...</td>\n",
+       "      <td>26884431c2e39cc7400544ef1e82d435073af297ebff06...</td>\n",
+       "      <td>60</td>\n",
+       "      <td>3GXQojTNRiaKvQi1YgWRPwcPSnKmDg7526</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5000000</td>\n",
+       "      <td>p2sh</td>\n",
+       "      <td>2916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-02-10 00:46:40+00:00</td>\n",
+       "      <td>af1808a1cd6afc5be651798356a63245cab5e58e8028c8...</td>\n",
+       "      <td>26884431c2e39cc7400544ef1e82d435073af297ebff06...</td>\n",
+       "      <td>60</td>\n",
+       "      <td>3Q16K4AMfqKFeqdRomz5VmkSkPkCc9TTNa</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3940104</td>\n",
+       "      <td>p2sh</td>\n",
+       "      <td>2916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-02-10 00:46:40+00:00</td>\n",
+       "      <td>cd519febe1de05e24a30e1b84fcfa7b58e835f3242531f...</td>\n",
+       "      <td>58258f6739ade6e952387a96c7a22a7f84623d3a514c05...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13kpRwBnLhKtqoJAFui8z1kSknbgCU47kt</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4800000</td>\n",
+       "      <td>p2pkh</td>\n",
+       "      <td>2916</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          ts  \\\n",
+       "0  2022-02-10 00:46:40+00:00   \n",
+       "1  2022-02-10 00:46:40+00:00   \n",
+       "2  2022-02-10 00:46:40+00:00   \n",
+       "3  2022-02-10 00:46:40+00:00   \n",
+       "4  2022-02-10 00:46:40+00:00   \n",
+       "\n",
+       "                                               tx_id  \\\n",
+       "0  d71dc8407017594d51a5de4587b622e2b3cb67d6de3e76...   \n",
+       "1  d71dc8407017594d51a5de4587b622e2b3cb67d6de3e76...   \n",
+       "2  af1808a1cd6afc5be651798356a63245cab5e58e8028c8...   \n",
+       "3  af1808a1cd6afc5be651798356a63245cab5e58e8028c8...   \n",
+       "4  cd519febe1de05e24a30e1b84fcfa7b58e835f3242531f...   \n",
+       "\n",
+       "                                            input_tx  vout  \\\n",
+       "0                                                  0     0   \n",
+       "1                                                  0     0   \n",
+       "2  26884431c2e39cc7400544ef1e82d435073af297ebff06...    60   \n",
+       "3  26884431c2e39cc7400544ef1e82d435073af297ebff06...    60   \n",
+       "4  58258f6739ade6e952387a96c7a22a7f84623d3a514c05...     1   \n",
+       "\n",
+       "                            output_to  output_index      value     script  \\\n",
+       "0  19dENFt4wVwos6xtgwStA6n8bbA57WCS58             0  640650575      p2pkh   \n",
+       "1                           op_return             1          0  OP_RETURN   \n",
+       "2  3GXQojTNRiaKvQi1YgWRPwcPSnKmDg7526             0    5000000       p2sh   \n",
+       "3  3Q16K4AMfqKFeqdRomz5VmkSkPkCc9TTNa             1    3940104       p2sh   \n",
+       "4  13kpRwBnLhKtqoJAFui8z1kSknbgCU47kt             0    4800000      p2pkh   \n",
+       "\n",
+       "   blk_file  \n",
+       "0      2916  \n",
+       "1      2916  \n",
+       "2      2916  \n",
+       "3      2916  \n",
+       "4      2916  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "58b9e6a8-0a23-40ca-bb1b-8c247ae332e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 22197111 entries, 0 to 22197110\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column        Dtype \n",
+      "---  ------        ----- \n",
+      " 0   ts            object\n",
+      " 1   tx_id         object\n",
+      " 2   input_tx      object\n",
+      " 3   vout          int64 \n",
+      " 4   output_to     object\n",
+      " 5   output_index  int64 \n",
+      " 6   value         int64 \n",
+      " 7   script        object\n",
+      " 8   blk_file      int64 \n",
+      "dtypes: int64(4), object(5)\n",
+      "memory usage: 1.5+ GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "btc_venv",
+   "language": "python",
+   "name": "btc_venv"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
